# ml-diag

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
data/: README.md
demo_uploads/: _gen_demo.py
demo_uploads/demo_healthy/: history.csv  meta.json
demo_uploads/demo_overfitting/: history.csv  meta.json
examples/: convert_mlflow.py  convert_tensorboard.py  diagnose_logged_run.py  log_real_training_run.py
results/: README.md
scripts/: aggregate_results.py  dump_test_predictions.py  generate_extra_figures.py  generate_oof_predictions.py  parse_mlflow_traces.py  run_all.sh  run_baseline_comparison.py  run_calibration_report.py  run_cascade_error_attribution.py  run_comparison.py  run_constraint_comparison.py  run_cross_corpus_summary.py  run_deepfd_baseline.py  run_demo_case.sh  run_disagreement_noise_injection.py  run_flat_baseline.py  run_full_case.py  run_grouped_baseline.py  run_hierarchical_infer.py  run_hierarchical_train.py  run_holm_bonferroni_report.py  run_hybrid_evaluation.py  run_label_summary.py  run_leakage_integrity_experiment.py  run_llm_interpretation.py  run_multiseed_disagreement.py  run_multiseed_orchestrator.sh  run_openml_holdout.py  run_partition_summary.py  run_patch_case.py  run_per_class_f1_bootstrap.py  run_per_class_f1_bootstrap_oof.py  run_per_dataset_breakdown.py  run_prototype_features_experiment.py  run_realworld_failure_eval.py  run_scenario_inventory.py  run_stacking_llm_ablation.py  run_stage1_threshold_sweep.py  run_thesis_demos.sh  smoke_load_corpus.py  (+2 more)
scripts/utils/: normalize_blank_lines.py  publish_github_clean.py  strip_comments_and_docstrings.py
src/ml_diag/: __init__.py  api.py  ui_helpers.py
src/ml_diag/_artifacts/cascade_default/: cascade_config.json  stage1_healthy_vs_faulty.joblib  stage2_faulty_data_vs_optgen.joblib  stage3_data_related.joblib  stage3_optimization_or_generalization_related.joblib
src/ml_diag/actions/: __init__.py  allowlist.py
src/ml_diag/benchmark/: __init__.py  partition.py
src/ml_diag/data/: __init__.py  manifest_loader.py  run_loader.py
src/ml_diag/diagnosis/: __init__.py  arbitrator.py  conformal_layer.py  hybrid_resolver.py  oof_predictions.py  stacking_resolver.py
src/ml_diag/evaluation/: __init__.py  case_outputs.py  compare_flat_vs_hier.py  error_attribution.py  explanation.py  reports.py
src/ml_diag/features/: __init__.py  data_integrity.py  grouped_features.py  prototypes.py  run_features.py
src/ml_diag/interpretation/: __init__.py  arbitrator_prompts.py  llm_interpreter.py  prompts.py  recommendations.py  response_schemas.py
src/ml_diag/labels/: __init__.py  hierarchical_labels.py
src/ml_diag/logging_sdk/: __init__.py  logger.py
src/ml_diag/models/: __init__.py  flat_baseline.py  inference.py  model_zoo.py  stage1.py  stage2.py  stage3.py  trainer.py
src/ml_diag/patch_eval/: __init__.py  evaluator.py
src/ml_diag/scenarios/: __init__.py  inventory.py
src/ml_diag/utils/: __init__.py  arrays.py
src/structured_diag/: ui_helpers.py
src/structured_diag/actions/: __init__.py  allowlist.py
src/structured_diag/benchmark/: __init__.py  partition.py
src/structured_diag/data/: __init__.py  manifest_loader.py  run_loader.py
src/structured_diag/diagnosis/: __init__.py  arbitrator.py  conformal_layer.py  hybrid_resolver.py  oof_predictions.py  stacking_resolver.py
src/structured_diag/evaluation/: __init__.py  case_outputs.py  compare_flat_vs_hier.py  error_attribution.py  explanation.py  metrics.py  reports.py
src/structured_diag/features/: __init__.py  data_integrity.py  grouped_features.py  prototypes.py  run_features.py
src/structured_diag/interpretation/: __init__.py  arbitrator_prompts.py  llm_interpreter.py  prompts.py  response_schemas.py
src/structured_diag/labels/: __init__.py  hierarchical_labels.py
src/structured_diag/logging_sdk/: __init__.py  logger.py  schemas.py
src/structured_diag/models/: __init__.py  flat_baseline.py  inference.py  model_zoo.py  stage1.py  stage2.py  stage3.py  trainer.py
src/structured_diag/patch_eval/: __init__.py  evaluator.py
src/structured_diag/scenarios/: __init__.py  inventory.py
src/structured_diag/utils/: __init__.py  arrays.py  logging.py
tests/: README.md  test_smoke.py
ui/: app.py
