[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_diag"
version = "0.1.0"
description = "Иерархическая диагностика ошибок обучения ML-моделей с ограниченным LLM-арбитражем, OOF-стэкингом и split-conformal абстенцией."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Milena Pivovarova", email = "mapivovarova26@gmail.com" },
    { name = "ml_diag contributors" },
]
keywords = [
    "machine-learning",
    "fault-diagnosis",
    "large-language-models",
    "constrained-generation",
    "conformal-prediction",
    "stacking",
    "hierarchical-classification",
    "training-failures",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 4 - Beta",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "matplotlib>=3.7",
    "pyarrow>=14.0",
    "catboost>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "mypy>=1.8",
    "pip-tools>=7.3",
]
ui = [
    "streamlit>=1.30",
]
llm = [
    "groq>=0.11",
    "requests>=2.31",
    "pydantic>=2.0",
]
thesis = [
    "python-docx>=1.1",
]

[project.urls]
Homepage = "https://github.com/brewerkka/ml-diag"
Repository = "https://github.com/brewerkka/ml-diag"
Issues = "https://github.com/brewerkka/ml-diag/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ml_diag*"]

[tool.setuptools.package-data]
ml_diag = ["py.typed", "_artifacts/cascade_default/*.joblib", "_artifacts/cascade_default/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
